Tile two finished

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
             <p class="principal-conteudo-2-esquerda-texto">Com o Prime Video Channels, os clientes Prime podem assinar os canais que amam sem compromissos de longo prazo, ou seja, podendo cancelar a qualquer momento. Experimente canais selecionados por 7 dias grátis e assista tudo no mesmo lugar, onde estiver.</p>
         </div>
         <div class="principal-conteudo-2-blocos">
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
-            <div class="principal-conteudo-2-bloco"><img></div>
+            <img src="assets/images/grid-1.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-2.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-3.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-4.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-5.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-6.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-7.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-8.jpg" class="principal-conteudo-2-bloco">
+            <img src="assets/images/grid-9.jpg" class="principal-conteudo-2-bloco">
         </div>
       </section>
       <section class="principal-conteudo-3">
