Tile Four finished

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
       </section>
       <section class="principal-conteudo-4">
         <div class="principal-conteudo-4-coluna">
-            <img class="principal-conteudo-4-coluna-imagem">
+            <img src="assets/images/Assista.png" class="principal-conteudo-4-coluna-imagem">
             <h2 class="principal-conteudo-4-coluna-titulo">Assista onde quiser</h2>
             <p class="principal-conteudo-4-coluna-texto">Assista no site ou no app Prime Video em seu celular, tablet ou seleção de Smart TVs — em até 3 dispositivos ao mesmo tempo.</p>
         </div>
         <div class="principal-conteudo-4-coluna">
-            <img class="principal-conteudo-4-coluna-imagem">
+            <img src="assets/images/baixe.png" class="principal-conteudo-4-coluna-imagem">
             <h2 class="principal-conteudo-4-coluna-titulo">Baixe para assistir quando e onde quiser</h2>
             <p class="principal-conteudo-4-coluna-texto">Assista offline no app Prime Video ao baixar títulos em seu iPhone, iPad, tablet ou dispositivo Android.</p>
         </div>
         <div class="principal-conteudo-4-coluna">
-            <img class="principal-conteudo-4-coluna-imagem">
+            <img src="assets/images/economize.png" class="principal-conteudo-4-coluna-imagem">
             <h2 class="principal-conteudo-4-coluna-titulo">Economia de dados</h2>
             <p class="principal-conteudo-4-coluna-texto">Controle o uso de dados ao baixar e assistir a vídeos em uma seleção de celulares e tablets.</p>
         </div>
