Finished (Arial font)

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="principal-conteudo-1-botoes">
             <button class="principal-conteudo-1-botao">Já é Prime? Faça login</button>
             <div class="divisor">
-                <span class="divisor-linha-esquerda"></span>
+                <div class="divisor-linha-esquerda"></div>
                 <p class="divisor-meio"> ou </p>
-                <span class="divisor-linha-direita"></span>
+                <div class="divisor-linha-direita"></div>
             </div>
             <button class="principal-conteudo-1-botao">Experimente 30 dias grátis*</button>
         </div>
@@ -82,8 +82,8 @@
       </section>
     </main>
     <footer class="rodape">
-        <img class="rodape-logo">
-        <p class="rodape-texto"><a href="#" class="rodape-texto-link">Termos e aviso de privacidade</a> <a href="#" class="rodape-texto-link">Envie-nos comentários</a> <a href="#" class="rodape-texto-link">Help©</a> 1996-2022, Amazon.com, Inc. ou suas afiliadas</p>
+        <img src="assets/images/rodape-logo.png" class="rodape-logo">
+        <p class="rodape-texto"><a href="#" class="rodape-texto-link">Termos e aviso de privacidade</a> <a href="#" class="rodape-texto-link">Envie-nos comentários</a> <a href="#" class="rodape-texto-link">Help</a> © 1996-2022, Amazon.com, Inc. ou suas afiliadas</p>
     </footer>
 </body>
 </html>
