--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="Assista a Amazon Originals exclusivos, além de filmes e séries populares.  Assista quando e onde quiser. Comece seu teste grátis." name="description">
     <title>Bem-vindo(a) ao Prime Video</title>
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
